--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 			<br>
 			<a href="https://link.springer.com/epdf/10.1007/s10064-021-02524-8?sharing_token=XHHlveN8YFvDziSMfEGaFfe4RwlQNchNByi7wbcMAY4UTOrRuw_Sk7b31BvNnQRKERjI8tjsFlfhKfpfSem96Jbbqy6n8nOLVnf5ex77O1sl-69QMsg0P4D4Ad-Wd--af-dP_NhU7d63zs_XbSjbRcrCullfSLsqzQk3hCeAtCI%3D"> Access the article here </a> <br> <br>
 			</p>
+			<img src = "Splashscreen_EasySMR.png" alt "EasySMR" class="imgcenter">
+			<p align = "center" class="caption"> 
+			EasySMR </p> 
 			
 			<p align="justify">
 			Abstract: Kinematic analysis is a widely used method to assess stability condition in jointed rock slopes and predict the modes of block detachments. 
