--- a/index.html
+++ b/index.html
@@ -110,6 +110,32 @@
 	
 			<br> Keywords: Computer application · Kinematic susceptibility · Slope mass rating · EasySMR
 			</p>
+			
+			<p align="justify">
+			<h3> Impact of rock block characteristics on rockfall hazard along Himalayan highways </a> </h3>
+			Singh AK, Kundu J, Sarkar K, Verma HK, Singh PK (2021) Impact of rock block characteristics on rockfall hazard and its implications for rockfall protection strategies along Himalayan highways: A case study. Bull Eng Geol Environ. 80, 5347–5368.
+			
+			<br>
+			<a href="https://doi.org/10.1007/s10064-021-02288-1"> Access the article here </a> <br> <br>
+			</p>
+			<img src = "Rockfallanalysis.JPG" alt "Rockfallanalysis" class="imgcenter">
+			<p align = "center" class="caption"> 
+			(a) Rockfall heap. (b) Gradation curve obtained from the fragmentation analysis. (c) Digitisation of failed rock blocks. (d) Field view size distribution of fragmented rockfall blocks </p> 
+			
+			<p align="justify">
+			Abstract: Kinematic analysis is a widely used method to assess stability condition in jointed rock slopes and predict the modes of block detachments. 
+			However, consideration of kinematic failures as crisp values (e.g., 0 for failure otherwise 1) in the conventional analysis is a limit to the susceptibility quantification. 
+			This paper has introduced novel methods based on the adjustment factors of slope mass rating (SMR) to quantify kinematic susceptibility of planar, wedge, and topple failure modes in terms of percentage/indices. 
+			Manual calculation of SMR is tedious and time-consuming, particularly when a large number of joints are involved. 
+			Hence, a method has been devised for the quantitative determination of both kinematic susceptibility and SMR with the help of a computer application. 
+			A computer application named EasySMR has been developed to automate and ease the calculation process. 
+			The application can incorporate a large number of joint data to provide convenient numeral, graphical and pie-chart interpretation of the kinematic susceptibility and SMR results. 
+			The algorithm has been validated with the results of 35 rock slopes from the Himalayan region, India. 
+			A few case studies have been presented to demonstrate the functionality of the program and enhanced capabilities which enables rigorous and accurate analysis of rock slope stability.
+			
+	
+			<br> Keywords: Computer application · Kinematic susceptibility · Slope mass rating · EasySMR
+			</p>
 
 			<p align="justify">
 			<h3> Continuous functions and a computer application for Rock Mass Rating </h3>
