--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 			<h3 align = "center", "justify" > About Jagadish Kundu </h3>
 			<p align = "justify"> 
 			
-			Jagadish Kundu is Currently a PhD student at IIT-ISM Dhanbad doing research in the field of engineering geology (slope stability and landslides).
+			Jagadish Kundu is a doctorate in Engineering Geology from IIT-ISM Dhanbad, India. His research interests lie in the field of in the field of slope stability, landslides and underground excavation.
 			<br> <br>			
 			Contact: <a href=""> email@jkundu.com</a>
 			</p>
