--- a/easysmr.html
+++ b/easysmr.html
@@ -110,6 +110,7 @@
 			
 			<ul>
 			.NET Framework 4.0 <br>
+			SQL Server Express LocalDB 2017 <br>
 			Microsoft Access Database Engine <br>
 			</ul>			
 			
