--- a/easysmr.html
+++ b/easysmr.html
@@ -164,7 +164,7 @@
 			
 			<img src = "EasySMR_format1.JPG" alt "EasySMR_Excel" class="imgcenter">
 			<p align = "center" class="caption">
-			Data format in MS Excel Sheet that can be imported to EasySMR </p>
+			Example of data format in MS Excel Sheet that can be imported to EasySMR </p>
 			
 		<br> <br>Hope you enjoy using the software! I would love to receive your feedback at <a href=""> email@jkundu.com</a>. 
 				Your comments/suggestions are valuable to make it more convenient and error free.
