--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 			<br> <br> 
 			<a href="https://link.springer.com/epdf/10.1007/s10064-021-02524-8?sharing_token=XHHlveN8YFvDziSMfEGaFfe4RwlQNchNByi7wbcMAY4UTOrRuw_Sk7b31BvNnQRKERjI8tjsFlfhKfpfSem96Jbbqy6n8nOLVnf5ex77O1sl-69QMsg0P4D4Ad-Wd--af-dP_NhU7d63zs_XbSjbRcrCullfSLsqzQk3hCeAtCI%3D"> Kundu et al. (2022) </a>
 			<br> <br> 
-			<a href="https://www.dropbox.com/s/kxrle2kqb1kf5ko/EasySMR_win.exe?dl=1"> Download EasySMR </a>
+			<a href="https://www.dropbox.com/s/hhxpfsblzu0scgg/EasySMR_1.0.0_win.rar?dl=1"> Download EasySMR </a>
 			</p>
 
 		</div>
