--- a/easysmr.html
+++ b/easysmr.html
@@ -159,7 +159,7 @@
 			<p align = "center" class="caption"> User Interface of EasySMR maximized </p>
 			
 			<p align="justify">			
-			The joint/discontinuity data can be imported to EasySMR through from an MS-Excel sheet in dip and dip direction format as shown in below figure. <br> <br>
+			The joint/discontinuity data can be imported to EasySMR from an MS-Excel sheet in dip and dip direction format as shown in below figure. <br> <br>
 			</p>			
 			
 			<img src = "EasySMR_format1.JPG" alt "EasySMR_Excel" class="imgcenter">
